# talky

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
execution/: __init__.py  action_executor.py  api_clients.py  erp_client.py  image_client.py
explainability/: __init__.py  audit_logger.py  explanation_engine.py
nlp/: __init__.py  intent_classifier.py  nlp_utils.py
planning/: __init__.py  astar_planner.py  knowledge_base.py  state_manager.py
speech/: __init__.py  stt_processor.py  tts_processor.py
static/css/: style.css
static/js/: app.js
templates/: dashboard.html  index.html  landing.html  settings.html
test/: new.py  test_perplexity.py
utils/: __init__.py  audio_utils.py  database.py  pdf_generator.py
